--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/tarasvolosheniuk/nodejs-typescript-boilerplate#readme",
   "dependencies": {
+    "agenda": "^5.0.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -30,13 +31,20 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "gts": "^5.2.0",
-    "helmet": "^7.0.0"
+    "helmet": "^7.0.0",
+    "joi": "^17.11.0",
+    "lodash": "^4.17.21",
+    "reflect-metadata": "^0.1.13",
+    "typedi": "^0.10.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/compression": "^1.7.4",
     "@types/cookie-parser": "^1.4.5",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
-    "@types/express-session": "^1.17.9"
+    "@types/express-session": "^1.17.9",
+    "@types/lodash": "^4.14.200",
+    "@types/node": "^20.8.9"
   }
 }
