--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,12 @@
     "noImplicitReturns": false,
     "paths": {
       "*": [
-        "./node_modules/*",
-        "./src/types/*"
+        "./node_modules/*"
       ]
     }
   },
+  "emitDecoratorMetadata": true,
+  "experimentalDecorators": true,
   "include": [
     "src/**/*.ts",
     "test/**/*.ts"
