--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "homepage": "https://github.com/tarasvolosheniuk/nodejs-typescript-boilerplate#readme",
   "dependencies": {
     "agenda": "^5.0.0",
+    "body-parser": "^1.20.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -34,17 +37,21 @@
     "helmet": "^7.0.0",
     "joi": "^17.11.0",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.10.4",
     "typedi": "^0.10.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.4",
     "@types/compression": "^1.7.4",
     "@types/cookie-parser": "^1.4.5",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/express-session": "^1.17.9",
     "@types/lodash": "^4.14.200",
+    "@types/multer": "^1.4.9",
     "@types/node": "^20.8.9"
   }
 }
