--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This template is designed for use as a single service within a REST multi-service application.",
   "main": "src/index.ts",
   "scripts": {
-    "test": "jest --verbose",
+    "test": "jest",
     "dev": "nodemon ./src/bin/server",
     "lint": "eslint --fix --ext .ts ."
   },
@@ -35,11 +35,14 @@
     "express-session": "^1.17.3",
     "gts": "^5.2.0",
     "helmet": "^7.0.0",
+    "jest-express": "^1.12.0",
     "joi": "^17.11.0",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.10.4",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typedi": "^0.10.0",
     "winston": "^3.11.0"
   },
@@ -50,8 +53,10 @@
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/express-session": "^1.17.9",
+    "@types/jest": "^29.5.6",
     "@types/lodash": "^4.14.200",
     "@types/multer": "^1.4.9",
-    "@types/node": "^20.8.9"
+    "@types/node": "^20.8.9",
+    "jest": "^29.7.0"
   }
 }
