--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "dev": "nodemon ./src/bin/server",
-    "lint": "eslint --fix --ext .ts ."
+    "lint": "eslint --fix --ext .ts .",
+    "prod": "pm2 start ts-node ./src/bin/server.ts --watch"
   },
   "repository": {
     "type": "git",
@@ -39,6 +40,7 @@
     "joi": "^17.11.0",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
+    "npm-run-all": "^4.1.5",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.10.4",
     "ts-jest": "^29.1.1",
