--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jest-express": "^1.12.0",
     "joi": "^17.11.0",
     "lodash": "^4.17.21",
+    "mongodb": "^6.2.0",
     "multer": "^1.4.5-lts.1",
     "npm-run-all": "^4.1.5",
     "reflect-metadata": "^0.1.13",
